--- a/MvcMovie/MvcMovie.csproj
+++ b/MvcMovie/MvcMovie.csproj
@@ -203,6 +203,19 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201604221149220_Initial.cs" />
+    <Compile Include="Migrations\201604221149220_Initial.Designer.cs">
+      <DependentUpon>201604221149220_Initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201604221207143_Rating.cs" />
+    <Compile Include="Migrations\201604221207143_Rating.Designer.cs">
+      <DependentUpon>201604221207143_Rating.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201604221215596_DataAnnotations.cs" />
+    <Compile Include="Migrations\201604221215596_DataAnnotations.Designer.cs">
+      <DependentUpon>201604221215596_DataAnnotations.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
@@ -301,6 +314,17 @@
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201604221149220_Initial.resx">
+      <DependentUpon>201604221149220_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201604221207143_Rating.resx">
+      <DependentUpon>201604221207143_Rating.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201604221215596_DataAnnotations.resx">
+      <DependentUpon>201604221215596_DataAnnotations.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
